--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
   "name": "ra-data-hasura",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "A data provider for connecting react-admin to a Hasura endpoint",
   "main": "dist/index.js",
   "sideEffects": false,
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/hasura/ra-data-hasura.git"
+    "url": "git+https://github.com/Tug/ra-data-hasura.git"
   },
   "bugs": {
-    "url": "https://github.com/hasura/ra-data-hasura/issues"
+    "url": "https://github.com/Tug/ra-data-hasura/issues"
   },
-  "homepage": "https://github.com/hasura/ra-data-hasura#readme",
+  "homepage": "https://github.com/Tug/ra-data-hasura#readme",
   "authors": [
     "Praveen Durairaju",
     "Radcliffe Robinson"
@@ -39,7 +39,7 @@
   },
   "peerDependencies": {
     "graphql": "^14.1.1",
-    "ra-core": "^3.0.0"
+    "react-admin": "^3.9.0"
   },
   "devDependencies": {
     "@babel/core": "^7.7.7",
@@ -52,7 +52,7 @@
     "jsonexport": "^2.4.1",
     "prettier": "^2.1.2",
     "pretty-quick": "^3.1.0",
-    "ra-core": "^3.0.0",
+    "react-admin": "^3.9.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-final-form": "^6.3.5",
