--- a/package.json
+++ b/package.json
@@ -38,8 +38,8 @@
     "ra-data-graphql": "^3.6.1"
   },
   "peerDependencies": {
-    "graphql": "^14.1.1",
-    "react-admin": "^3.9.0"
+    "graphql": "^14.x",
+    "react-admin": "^3.x"
   },
   "devDependencies": {
     "@babel/core": "^7.7.7",
